--- a/deployment/cloudfront.template
+++ b/deployment/cloudfront.template
@@ -212,6 +212,13 @@ Resources:
     Type: AWS::CloudFormation::CustomResource
   CloudfrontHelperFunction:
     Type: AWS::Lambda::Function
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W89
+            reason: "Not applicable for this release."
+          - id: W92
+            reason: "Not applicable for this release."
     Properties:
       Code:
           S3Bucket: !Ref HostingBucketName
@@ -220,7 +227,7 @@ Resources:
       Handler: handler/cloudfront-helper.handler
       MemorySize: 256
       Role: !GetAtt CloudfrontHelperRole.Arn
-      Runtime: nodejs10.x
+      Runtime: nodejs12.x
       Timeout: 300
   CloudfrontHelperRole:
     Properties:
