syncing changes from the master branch v1.0.3

--- a/aws-connect-vm-serverless/serverless.yml
+++ b/aws-connect-vm-serverless/serverless.yml
@@ -206,7 +206,7 @@ functions:
     handler: 'com.amazonaws.kvstream.KVSProcessRecordingLambda::handleRequest'
     role: KvsProcessRecordingIamRole
     timeout: 900
-    runtime: java8
+    runtime: java8.al2
     package:
       individually: true
       artifact: 'target/${self:service}-java.jar'
