--- a/aws-connect-vm-serverless/serverless.yml
+++ b/aws-connect-vm-serverless/serverless.yml
@@ -631,6 +631,10 @@ resources:
                     - dynamodb:Query
                     - dynamodb:UpdateItem
                   Resource: !GetAtt ContactVoicemailTable.Arn
+                - Effect: Allow
+                  Action:
+                    - secretsmanager:GetSecretValue
+                  Resource: !Ref VoicemailSecret
 
     GetAgentByExtensionIamRole:
       Type: AWS::IAM::Role
