changes to fix missing value of SECRET_ARN from TranscriptionEvents, and adding secretsmanager:GetValue permissions to TranscriptionEventsIamRole

--- a/source/aws-connect-vm-serverless/serverless.yml
+++ b/source/aws-connect-vm-serverless/serverless.yml
@@ -91,6 +91,7 @@ functions:
       CONTACT_VOICEMAIL_TABLE_NAME: !Ref ContactVoicemailTable
       SIGNED_RECORDING_URL_EXP: !Ref SignedRecordingUrlExpiration
       AVAILABLE_SMS_COUNTRIES: !Ref AvailableSMSCountries
+      SECRET_ARN: !Ref VoicemailSecret
 
   GetAgentByExtension:
     description: >
@@ -630,6 +631,10 @@ resources:
                     - dynamodb:Query
                     - dynamodb:UpdateItem
                   Resource: !GetAtt ContactVoicemailTable.Arn
+                - Effect: Allow
+                  Action:
+                    - secretsmanager:GetSecretValue
+                  Resource: !Ref VoicemailSecret
 
     GetAgentByExtensionIamRole:
       Type: AWS::IAM::Role
