Master fix catchup fixes from development, view CHANGELOG for details.

--- a/deployment/aws-connect-vm.template
+++ b/deployment/aws-connect-vm.template
@@ -94,7 +94,7 @@
         },
         "Runtime": "nodejs12.x",
         "Timeout": 30,
-        "Description": "AWS Lambda Function that will be triggered when transcription status changes.\n",
+        "Description": "AWS Lambda Function that will be triggered when transcription status changes.",
         "Environment": {
           "Variables": {
             "USERS_TABLE_NAME": {
@@ -158,7 +158,7 @@
         },
         "Runtime": "nodejs12.x",
         "Timeout": 30,
-        "Description": "AWS Lambda Function that will be triggered when dialog flow needs to get agent's information based on phone extension\n",
+        "Description": "AWS Lambda Function that will be triggered when dialog flow needs to get agent's information based on phone extension",
         "Environment": {
           "Variables": {
             "USERS_TABLE_NAME": {
@@ -642,7 +642,7 @@
         },
         "Runtime": "java8.al2",
         "Timeout": 900,
-        "Description": "Process recording via CTR\n",
+        "Description": "Process recording via CTR",
         "Environment": {
           "Variables": {
             "START_SELECTOR_TYPE": "FRAGMENT_NUMBER",
@@ -2144,7 +2144,7 @@
     },
     "AmazonConnectGetAgentLambdaRights": {
       "Type": "AWS::Lambda::Permission",
-      "Description": "Allows amazon connect to invoke the GetAgentByExtension lambda\n",
+      "Description": "Allows amazon connect to invoke the GetAgentByExtension lambda",
       "Properties": {
         "FunctionName": {
           "Ref": "GetAgentByExtensionLambdaFunction"
