--- a/aws-connect-vm-portal/env/env.template
+++ b/aws-connect-vm-portal/env/env.template
@@ -1,4 +1,4 @@
-# Production build settings, do not modify
+# Portal build settings, do not modify
 REACT_APP_BASE_API='__BASE_API__'
 REACT_APP_API_KEY='__API_KEY__'
 REACT_APP_COGNITO_DOMAIN='__C_DOMAIN__'
