--- a/aws-connect-vm-portal/package.json
+++ b/aws-connect-vm-portal/package.json
@@ -5,40 +5,24 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
-    "@types/jest": "^24.0.19",
-    "@types/material-ui": "^0.21.7",
-    "@types/node": "^12.11.1",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@types/request-promise": "^4.1.44",
     "awesome-phonenumber": "^2.20.0",
     "aws-amplify": "^2.2.1",
     "aws-amplify-react": "^3.1.2",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
     "material-ui-phone-number": "^2.2.2",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "typescript": "^3.6.4"
+    "request-promise": "^4.2.4"
   },
   "scripts": {
-    "build": "sh -ac '. ./env/.env.prod; npx react-scripts build'",
-    "deploy:dev": "pipenv run deploy_dev && sh -ac '. ./env/.env.dev; react-scripts build' && node ./scripts/uploader --stage dev --verbose",
-    "deploy:prod": "pipenv run deploy_prod && sh -ac '. ./env/.env.prod; react-scripts build' && node ./scripts/uploader --stage prod --verbose",
-    "modify:build": "node ./scripts/modify_build.js"
+    "build": "sh -ac '. ./env/env.template; npx react-scripts build'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,6 +45,19 @@
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.0.2",
     "remote-redux-devtools": "^0.5.16",
-    "replace-in-file": "^5.0.2"
+    "replace-in-file": "^5.0.2",
+    "@types/jest": "^24.0.19",
+    "@types/material-ui": "^0.21.7",
+    "@types/node": "^12.11.1",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router": "^5.1.2",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/request-promise": "^4.1.44",
+    "prop-types": "^15.7.2",
+    "react-scripts": "3.2.0",
+    "typescript": "^3.6.4"
   }
 }
