--- a/source/aws-connect-vm-serverless/package.json
+++ b/source/aws-connect-vm-serverless/package.json
@@ -18,8 +18,8 @@
     "node-fetch": "^2.6.0",
     "node-jose": "^1.1.3",
     "nodemailer": "^6.3.1",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
+    "request": "2.53.0",
+    "request-promise": "4.2.4",
     "source-map-support": "^0.5.16",
     "utf8": "^3.0.0",
     "uuid": "^3.4.0",
