--- a/source/aws-connect-vm-serverless/package.json
+++ b/source/aws-connect-vm-serverless/package.json
@@ -1,61 +1,64 @@
 {
-  "name": "aws-connect-vm-api",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "webpack && mvn clean package",
-    "info:dev": "sls info --verbose --stage dev --region us-west-2 | node tools/process-output.js ",
-    "deploy:dev": "npm run build && sls deploy --stage dev --region us-west-2 && npm run info:dev",
-    "test": "jest tests/*.test.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "amazon-cognito-identity-js": "^3.1.2",
-    "awesome-phonenumber": "^2.20.0",
-    "babel-runtime": "^6.26.0",
-    "jmespath": "^0.15.0",
-    "node-fetch": "^2.6.0",
-    "node-jose": "^1.1.3",
-    "nodemailer": "^6.3.1",
-    "request": "2.53.0",
-    "request-promise": "4.2.4",
-    "source-map-support": "^0.5.16",
-    "utf8": "^3.0.0",
-    "uuid": "^3.4.0",
-    "xml2js": "^0.4.22"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "aws-sdk": "^2.638.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^7.1.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-webpack-aliases": "^1.1.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^6.4.0",
-    "glob": "^7.1.5",
-    "is-nan": "^1.3.0",
-    "jest": "^24.9.0",
-    "serverless": "^1.56.1",
-    "serverless-offline": "^5.7.3",
-    "serverless-prune-plugin": "^1.4.1",
-    "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-webpack": "^5.3.1",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "jest": {
-    "verbose": true,
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ]
-  }
+    "name": "aws-connect-vm-api",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "build": "webpack && mvn clean package",
+        "info:dev": "sls info --verbose --stage dev --region us-west-2 | node tools/process-output.js ",
+        "deploy:dev": "npm run build && sls deploy --stage dev --region us-west-2 && npm run info:dev",
+        "test": "jest tests/*.test.js --config jest.config.js"
+    },
+    "author": "",
+    "license": "Apache-2.0",
+    "dependencies": {
+        "amazon-cognito-identity-js": "^3.1.2",
+        "awesome-phonenumber": "^2.20.0",
+        "babel-runtime": "^6.26.0",
+        "jmespath": "^0.15.0",
+        "minimist": "^1.2.6",
+        "node-fetch": "^2.6.0",
+        "node-jose": "^2.1.1",
+        "nodemailer": "^6.3.1",
+        "request": "^2.88.2",
+        "request-promise": "4.2.4",
+        "source-map-support": "^0.5.16",
+        "utf8": "^3.0.0",
+        "uuid": "^3.4.0",
+        "xml2js": "^0.4.22"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.8.7",
+        "@babel/preset-env": "^7.8.7",
+        "aws-sdk": "^2.638.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-jest": "^25.1.0",
+        "babel-loader": "^7.1.3",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-plugin-webpack-aliases": "^1.1.3",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "eslint": "^6.4.0",
+        "glob": "^7.1.5",
+        "is-nan": "^1.3.0",
+        "jest": "^28.1.3",
+        "serverless": "^3.22.0",
+        "serverless-offline": "^9.2.6",
+        "serverless-prune-plugin": "^2.0.1",
+        "serverless-webpack": "^5.9.0",
+        "webpack": "^4.19.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-node-externals": "^1.7.2"
+    },
+    "resolutions": {
+        "minimist": "^1.2.6"
+    },
+    "jest": {
+        "verbose": true,
+        "moduleDirectories": [
+            "node_modules",
+            "src"
+        ]
+    }
 }
